# docs/swagger.json
@@ -2053,6 +2053,18 @@
                         "description": "每页数量",
                         "name": "pageSize",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "关键词（标题/slug/摘要）",
+                        "name": "keyword",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "页面类型 summary/entity/concept",
+                        "name": "pageType",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -2207,6 +2219,12 @@
                         "type": "string",
                         "description": "关键词（标题/slug/摘要）",
                         "name": "keyword",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "页面类型 summary/entity/concept",
+                        "name": "pageType",
                         "in": "query"
                     }
                 ],
